#5 added Home button to AppBar and displayed on Recipe Detail

--- a/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
+++ b/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
@@ -15,6 +15,7 @@
         <ab:AppBar x:Name="AppBar" 
                    Title="Containers"
                    BackButtonVisible="True"
+                   HomeButtonVisible="False"
                    FilterButtonVisible="False"
                    SearchButtonVisible="False"
                    SettingsButtonVisible="False"></ab:AppBar>
