Moved Style XAML files into their own top level directory

--- a/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
+++ b/BarBot/BarBot.UWP/Pages/ContainerPanel.xaml
@@ -14,7 +14,7 @@
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ProgressRingStyles.xaml" />
+                <ResourceDictionary Source="ms-appx:///Styles/ProgressRingStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Page.Resources>
