--- a/BarBot/BarBot.UWP/UserControls/AppBar/AppBar.xaml
+++ b/BarBot/BarBot.UWP/UserControls/AppBar/AppBar.xaml
@@ -10,7 +10,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="AppBarStyles.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Styles/AppBarStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
