--- a/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryTile.xaml
+++ b/BarBot/BarBot.UWP/UserControls/CategoryList/Uc_CategoryTile.xaml
@@ -15,7 +15,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="CategoryListStyles.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Styles/CategoryListStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
