--- a/BarBot/BarBot.UWP/UserControls/ContainerPanel/Uc_ContainerList.xaml
+++ b/BarBot/BarBot.UWP/UserControls/ContainerPanel/Uc_ContainerList.xaml
@@ -11,7 +11,7 @@
     <UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ContainerPanelStyles.xaml"/>
+                <ResourceDictionary Source="ms-appx:///Styles/ContainerPanelStyles.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </UserControl.Resources>
