--- a/BarBot/BarBot.UWP/Styles/AppBarStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/AppBarStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls.AppBar"
+    xmlns:local="using:BarBot.UWP.Styles"
     xmlns:usercontrols="using:BarBot.UWP.UserControls">
 
     <!-- ToUpperConverter -->
