--- a/BarBot/BarBot.UWP/Styles/CategoryListStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/CategoryListStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.UserControls.CategoryList">
+    xmlns:local="using:BarBot.UWP.Styles">
 
     <x:Double x:Key="PageWidth">1280</x:Double>
     <x:Double x:Key="PageHeight">720</x:Double>
