--- a/BarBot/BarBot.UWP/Styles/ProgressRingStyles.xaml
+++ b/BarBot/BarBot.UWP/Styles/ProgressRingStyles.xaml
@@ -1,7 +1,7 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:BarBot.UWP.Pages">
+    xmlns:local="using:BarBot.UWP.Styles">
 
     <Style x:Key="ProgressRingStyle"
            TargetType="ProgressRing">
