--- a/BarBot/BarBot.UWP/Themes/Generic.xaml
+++ b/BarBot/BarBot.UWP/Themes/Generic.xaml
@@ -4,11 +4,13 @@
     xmlns:local="using:BarBot.UWP"
     xmlns:cl="using:BarBot.UWP.UserControls.CategoryList" 
     xmlns:cp="using:BarBot.UWP.UserControls.ContainerPanel"
+    xmlns:rd="using:BarBot.UWP.UserControls.RecipeDetail"
     xmlns:rl="using:BarBot.UWP.UserControls.RecipeList">
 
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="ms-appx:///Styles/ContainerTileStyles.xaml" />
         <ResourceDictionary Source="ms-appx:///Styles/MenuTileStyles.xaml" />
+        <ResourceDictionary Source="ms-appx:///Styles/IngredientRowStyles.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
     <!-- Container Tile Template Control -->
@@ -157,6 +159,67 @@
                                 </ControlTemplate>
                             </Button.Template>
                         </Button>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
+    <!-- Ingredient Row Template Control -->
+
+    <Style TargetType="rd:Tc_IngredientRow">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="rd:Tc_IngredientRow">
+                    <Grid x:Name="IngredientRowGrid"
+                          Style="{StaticResource IngredientRowGridStyle}"
+                          Background="#222222">
+                        <StackPanel x:Name="IngredientTextStackPanel"
+                                    Style="{StaticResource IngredientTextStackPanelStyle}">
+                            <TextBlock x:Name="IngredientNameTextBlock"
+                                       Text="{Binding Path=Ingredient.Name}"
+                                       Style="{StaticResource IngredientNameTextBlockStyle}" />
+                            <TextBlock x:Name="IngredientVolumeTextBlock"
+                                       Text="{Binding Path=VolumeText}"
+                                       Style="{StaticResource IngredientVolumeTextBlockStyle}" />       
+                        </StackPanel>
+
+                        <StackPanel x:Name="IngredientActionStackPanel"
+                                    Style="{StaticResource IngredientActionStackPanelStyle}">
+                            <Button x:Name="DecrementVolumeButton"
+                                    x:FieldModifier="public"
+                                    Style="{StaticResource ActionButtonStyle}">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="Button">
+                                        <Image x:Name="MinusImage" 
+                                               Source="ms-appx:///Assets/minus.png"
+                                               Style="{StaticResource ActionImageStyle}" />
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                            <Button x:Name="IncrementVolumeButton"
+                                    x:FieldModifier="public"
+                                    Style="{StaticResource ActionButtonStyle}">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="Button">
+                                        <Image x:Name="PlusImage" 
+                                               Source="ms-appx:///Assets/plus.png"
+                                               Style="{StaticResource ActionImageStyle}" />
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                            <Button x:Name="RemoveIngredientButton"
+                                    x:FieldModifier="public"
+                                    Style="{StaticResource ActionButtonStyle}">
+                                <Button.Template>
+                                    <ControlTemplate TargetType="Button">
+                                        <Image x:Name="RemoveImage" 
+                                               Source="ms-appx:///Assets/remove.png"
+                                               Style="{StaticResource RemoveImageStyle}" />
+                                    </ControlTemplate>
+                                </Button.Template>
+                            </Button>
+                        </StackPanel>
                     </Grid>
                 </ControlTemplate>
             </Setter.Value>
