#5 refactored Add Ingredient button to add new Ingredient Row

--- a/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_RecipeDetail.xaml
+++ b/BarBot/BarBot.UWP/UserControls/RecipeDetail/Uc_RecipeDetail.xaml
@@ -67,7 +67,7 @@
         
         <ScrollViewer x:Name="IngredientListScrollViewer"
                       Style="{StaticResource IngredientListScrollViewerStyle}">
-            <StackPanel x:Name="ingredientList"/>
+            <StackPanel x:Name="IngredientRowStackPanel"/>
         </ScrollViewer>
         
         <!-- Recipe Options -->
